5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4271/executions/1838_2602.log
== TEST (2019-06-18 22:41:59) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
qtde = array([x, y, z])
# Resolucao do sistema de equacoes lineares
r = dot(inv(mat), qtde.T)
# Impressao do resultado
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 22:42:28) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
qtde = array([2200, 650, 1800])
# Resolucao do sistema de equacoes lineares
r = dot(inv(mat), qtde.T)
# Impressao do resultado
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 22:43:16) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array([[2, 1, 4],
				 [1, 2, 0],
				 [2, 3, 2]])
qtde = array([2200, 650, 1800])
# Resolucao do sistema de equacoes lineares
r = dot(inv(mat), qtde.T)
# Impressao do resultado
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 22:45:36) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array([[2, 1, 4],
				 [1, 2, 0],
				 [2, 3, 2]])
qtde = array([2200, 650, 1800])
# Resolucao do sistema de equacoes lineares
r = dot(inv(mat), qtde.T)
# Impressao do resultado
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 22:45:49) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array([[2, 1, 4],
				 [1, 2, 0],
				 [2, 3, 2]])
qtde = array([2200, 650, 1800])
# Resolucao do sistema de equacoes lineares
r = solve(inv(mat), qtde.T)
# Impressao do resultado
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 14:57:00) 
-- CODE:
from numpy import *
from numpy.linalg import *
quant = array ([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
n = ([2200, 650, 1800])
N = n.T
quant = dot(quant, n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 14:57:08) 
-- CODE:
from numpy import *
from numpy.linalg import *
quant = array ([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
n = ([2200, 650, 1800])
n = n.T
quant = dot(quant, n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-19 14:57:25) 
-- CODE:
from numpy import *
from numpy.linalg import *
quant = array ([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
n = ([2200, 650, 1800])
n = n.T
quant = dot(quant, n)

-- EXECUTION TIME:
0.950326
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1838/2602/main.py", line 5, in <module>
    n = n.T
AttributeError: 'list' object has no attribute 'T'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 15:00:58) 
-- CODE:
from numpy import *
from numpy.linalg import *
quant = array ([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
n = ([2200, 650, 1800])
n = n.T
quant = dot(quant, n)
solucao = solve(quant, consumo)
print(solucao)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 15:01:09) 
-- CODE:
from numpy import *
from numpy.linalg import *
quant = array ([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
n = ([2200, 650, 1800])
n = n. T
quant = dot(quant, n)
solucao = solve(quant, consumo)
print(solucao)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 15:01:18) 
-- CODE:
from numpy import *
from numpy.linalg import *
quant = array ([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
n = ([2200, 650, 1800])
n = n.t
quant = dot(quant, n)
solucao = solve(quant, consumo)
print(solucao)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-19 15:02:43) 
-- CODE:
from numpy import *
from numpy.linalg import *
quant = array ([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
n = ([2200, 650, 1800])
n = n.T
quant = dot(quant, n)
print("estafilococo", )
-- EXECUTION TIME:
1.15572
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1838/2602/main.py", line 5, in <module>
    n = n.T
AttributeError: 'list' object has no attribute 'T'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 15:50:09) 
-- CODE:
from numpy import *
from numpy.linalg import *
quant = ([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
n = array([2200, 650, 1800])
n = n.T
quant = dot(quant, n)
print("Estafilococo: ", round(quant[0], 1))
print("Salmonela: ", round(quant[1], 1))
print("Coli: ", round(quant[2]))
if quant[0] < max(quant):
	print("Estafilococo")
elif quant[1] < max(quant):
	print("Salmonela")
else:
	print("Coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-19 15:50:15) 
-- CODE:
from numpy import *
from numpy.linalg import *
quant = ([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
n = array([2200, 650, 1800])
n = n.T
quant = dot(quant, n)
print("Estafilococo: ", round(quant[0], 1))
print("Salmonela: ", round(quant[1], 1))
print("Coli: ", round(quant[2]))
if quant[0] < max(quant):
	print("Estafilococo")
elif quant[1] < max(quant):
	print("Salmonela")
else:
	print("Coli")
-- EXECUTION TIME:
1.11438
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
Estafilococo:  12250
Salmonela:  3500
Coli:  9950
Salmonela
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
Estafilococo:  12250
Salmonela:  3500
Coli:  9950
Salmonela
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
Estafilococo:  12250
Salmonela:  3500
Coli:  9950
Salmonela
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 15:50:24) 
-- CODE:
from numpy import *
from numpy.linalg import *
quant = ([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
n = array([2200, 650, 1800])
n = n.T
quant = dot(quant, n)
print("Estafilococo: ", round(quant[0], 1))
print("Salmonela: ", round(quant[1], 1))
print("Coli: ", round(quant[2]))
if quant[0] < max(quant):
	print("Estafilococo")
elif quant[1] < max(quant):
	print("Salmonela")
else:
	print("Coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 15:50:56) 
-- CODE:
from numpy import *
from numpy.linalg import *
quant = ([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
n = array([2200, 650, 1800])
n = n.T
quant = dot(quant, n)
print("Estafilococo: ", round(quant[0], 1))
print("Salmonela: ", round(quant[1], 1))
print("Coli: ", round(quant[2]))
if quant[0] == max(quant):
	print("Estafilococo")
elif quant[1] == max(quant):
	print("Salmonela")
else:
	print("Coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 15:51:09) 
-- CODE:
from numpy import *
from numpy.linalg import *
quant = ([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
n = array([2200, 650, 1800])
n = n.T
quant = dot(quant, n)
print("Estafilococo: ", round(quant[0], 1))
print("Salmonela: ", round(quant[1], 1))
print("Coli: ", round(quant[2]))
if quant[0] > max(quant):
	print("Estafilococo")
elif quant[1] > max(quant):
	print("Salmonela")
else:
	print("Coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 15:51:15) 
-- CODE:
from numpy import *
from numpy.linalg import *
quant = ([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
n = array([2200, 650, 1800])
n = n.T
quant = dot(quant, n)
print("Estafilococo: ", round(quant[0], 1))
print("Salmonela: ", round(quant[1], 1))
print("Coli: ", round(quant[2]))
if quant[0] >= max(quant):
	print("Estafilococo")
elif quant[1] > max(quant):
	print("Salmonela")
else:
	print("Coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-19 15:51:17) 
-- CODE:
from numpy import *
from numpy.linalg import *
quant = ([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
n = array([2200, 650, 1800])
n = n.T
quant = dot(quant, n)
print("Estafilococo: ", round(quant[0], 1))
print("Salmonela: ", round(quant[1], 1))
print("Coli: ", round(quant[2]))
if quant[0] >= max(quant):
	print("Estafilococo")
elif quant[1] > max(quant):
	print("Salmonela")
else:
	print("Coli")
-- EXECUTION TIME:
1.15329
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
Estafilococo:  12250
Salmonela:  3500
Coli:  9950
Estafilococo
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
Estafilococo:  12250
Salmonela:  3500
Coli:  9950
Estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
Estafilococo:  12250
Salmonela:  3500
Coli:  9950
Estafilococo
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 15:51:22) 
-- CODE:
from numpy import *
from numpy.linalg import *
quant = ([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
n = array([2200, 650, 1800])
n = n.T
quant = dot(quant, n)
print("Estafilococo: ", round(quant[0], 1))
print("Salmonela: ", round(quant[1], 1))
print("Coli: ", round(quant[2]))
if quant[0] >= max(quant):
	print("Estafilococo")
elif quant[1] >+ max(quant):
	print("Salmonela")
else:
	print("Coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 15:51:35) 
-- CODE:
from numpy import *
from numpy.linalg import *
quant = ([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
n = array([2200, 650, 1800])
n = n.T
quant = dot(quant, n)
print("Estafilococo: ", round(quant[0], 1))
print("Salmonela: ", round(quant[1], 1))
print("Coli: ", round(quant[2]))
if quant[0] <= max(quant):
	print("Estafilococo")
elif quant[1] <= max(quant):
	print("Salmonela")
else:
	print("Coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 15:51:58) 
-- CODE:
from numpy import *
from numpy.linalg import *
quant = ([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
n = array([2200, 650, 1800])
n = n.T
quant = dot(quant, n)
print("Estafilococo: ", round(quant[0], 1))
print("Salmonela: ", round(quant[1], 1))
print("Coli: ", round(quant[2]))
if quant[0] < max(quant):
	print("Estafilococo")
elif quant[1] < max(quant):
	print("Salmonela")
else:
	print("Coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 15:52:13) 
-- CODE:
from numpy import *
from numpy.linalg import *
quant = ([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
n = array([2200, 650, 1800])
n = n.T
quant = dot(quant, n)
print("Estafilococo: ", round(quant[0], 1))
print("Salmonela: ", round(quant[1], 1))
print("Coli: ", round(quant[2]))
if quant[0] < min(quant):
	print("Estafilococo")
elif quant[1] < min(quant):
	print("Salmonela")
else:
	print("Coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 15:52:26) 
-- CODE:
from numpy import *
from numpy.linalg import *
quant = ([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
n = array([2200, 650, 1800])
n = n.T
quant = dot(quant, n)
print("Estafilococo: ", round(quant[0], 1))
print("Salmonela: ", round(quant[1], 1))
print("Coli: ", round(quant[2]))
if quant[0] >= min(quant):
	print("Estafilococo")
elif quant[1] >= min(quant):
	print("Salmonela")
else:
	print("Coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 15:52:35) 
-- CODE:
from numpy import *
from numpy.linalg import *
quant = ([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
n = array([2200, 650, 1800])
n = n.T
quant = dot(quant, n)
print("Estafilococo: ", round(quant[0], 1))
print("Salmonela: ", round(quant[1], 1))
print("Coli: ", round(quant[2]))
if quant[0] == min(quant):
	print("Estafilococo")
elif quant[1] == min(quant):
	print("Salmonela")
else:
	print("Coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-19 15:52:41) 
-- CODE:
from numpy import *
from numpy.linalg import *
quant = ([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
n = array([2200, 650, 1800])
n = n.T
quant = dot(quant, n)
print("Estafilococo: ", round(quant[0], 1))
print("Salmonela: ", round(quant[1], 1))
print("Coli: ", round(quant[2]))
if quant[0] == min(quant):
	print("Estafilococo")
elif quant[1] == min(quant):
	print("Salmonela")
else:
	print("Coli")
-- EXECUTION TIME:
1.11082
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
Estafilococo:  12250
Salmonela:  3500
Coli:  9950
Salmonela
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
Estafilococo:  12250
Salmonela:  3500
Coli:  9950
Salmonela
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
Estafilococo:  12250
Salmonela:  3500
Coli:  9950
Salmonela
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 15:52:45) 
-- CODE:
from numpy import *
from numpy.linalg import *
quant = ([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
n = array([2200, 650, 1800])
n = n.T
quant = dot(quant, n)
print("Estafilococo: ", round(quant[0], 1))
print("Salmonela: ", round(quant[1], 1))
print("Coli: ", round(quant[2]))
if quant[0] == min(quant):
	print("Estafilococo")
elif quant[1] == min(quant):
	print("Salmonela")
else:
	print("Coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 10:21:15) 
-- CODE:
from numpy import *
from numpy.linalg import *
quant = ([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
n = array([2200, 650, 1800])
n = n.T
quant = dot(inv(quant), n)
print("estafilococo: ", round(quant[0], 1))
print("salmonela: ", round(quant[1], 1))
print("coli: ", round(quant[2], 1))
if quant[0] == min(quant):
	print("estafilococo")
elif quant[1] == min(quant):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 10:22:32) 
-- CODE:
from numpy import *
from numpy.linalg import *
quant = ([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
n = array([2200, 650, 1800])
n = n.T
quant = dot(inv(quant), n)
print("estafilococo: ", round(quant[0], 1))
print("salmonela: ", round(quant[1], 1))
print("coli: ", round(quant[2], 1))
if quant[0] == min(quant):
	print("estafilococo")
elif quant[1] == min(quant):
	print("salmonela")
else:
	print("coli")
-- EXECUTION TIME:
1.10077
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  450.0
salmonela:  100.0
coli:  300.0
salmonela
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  450.0
salmonela:  100.0
coli:  300.0
salmonela
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  450.0
salmonela:  100.0
coli:  300.0
salmonela
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 10:22:54) 
-- CODE:
from numpy import *
from numpy.linalg import *
quant = ([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
n = array([2200, 650, 1800])
n = n.T
quant = dot(inv(quant), n)
print("estafilococo: ", round(quant[0], 1))
print("salmonela: ", round(quant[1], 1))
print("coli: ", round(quant[2], 1))
if quant[0] == min(quant):
	print("estafilococo")
elif quant[1] == min(quant):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 10:23:44) 
-- CODE:
from numpy import *
from numpy.linalg import *
quant = ([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
n = array([2200, 650, 1800])
n = n.T
quant = dot(inv(quant), n)
print("estafilococo: ", round(quant[0], 1))
print("salmonela: ", round(quant[1], 1))
print("coli: ", round(quant[2], 1))
if quant[0] == min(quant):
	print("estafilococo")
elif quant[1] == min(quant):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 10:25:10) 
-- CODE:
from numpy import *
from numpy.linalg import *
quant = ([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
n = array([2200, 650, 1800])
n = n.T
quant = dot(inv(quant), n)
print("estafilococo: ", round(quant[0], 1))
print("salmonela: ", round(quant[1], 1))
print("coli: ", round(quant[2], 1))
if quant[0] == min(quant):
	print("estafilococo")
elif quant[1] == min(quant):
	print("salmonela")
else:
	print("coli")
-- EXECUTION TIME:
1.25533
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  450.0
salmonela:  100.0
coli:  300.0
salmonela
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  450.0
salmonela:  100.0
coli:  300.0
salmonela
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  450.0
salmonela:  100.0
coli:  300.0
salmonela
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 10:25:24) 
-- CODE:
from numpy import *
from numpy.linalg import *
quant = ([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
n = array([2200, 650, 1800])
n = n.T
quant = dot(inv(quant), n)
print("estafilococo: ", round(quant[0], 1))
print("salmonela: ", round(quant[1], 1))
print("coli: ", round(quant[2], 1))
if quant[0] == min(quant):
	print("estafilococo")
elif quant[1] == min(quant):
	print("salmonela")
else:
	print("coli")
-- EXECUTION TIME:
0.880262
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  450.0
salmonela:  100.0
coli:  300.0
salmonela
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  450.0
salmonela:  100.0
coli:  300.0
salmonela
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  450.0
salmonela:  100.0
coli:  300.0
salmonela
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 10:25:30) 
-- CODE:
from numpy import *
from numpy.linalg import *
quant = ([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
n = array([2200, 650, 1800])
n = n.T
quant = dot(inv(quant), n)
print("estafilococo: ", round(quant[0], 1))
print("salmonela: ", round(quant[1], 1))
print("coli: ", round(quant[2], 1))
if quant[0] == min(quant):
	print("estafilococo")
elif quant[1] == min(quant):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:15:55) 
-- CODE:
from numpy import *
from numpy.linalg import *
quant = ([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
n = array([2200, 650, 1800])
n = n.T
quant = dot(inv(quant), n)
print("estafilococo: ", round(quant[0], 1))
print("salmonela: ", round(quant[1], 1))
print("coli: ", round(quant[2], 1))
if quant[0] == min(quant):
	print("estafilococo")
elif quant[1] == min(quant):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 22:16:18) 
-- CODE:
from numpy import *
from numpy.linalg import *
quant = ([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
n = array([2200, 650, 1800])
n = n.T
quant = dot(inv(quant), n)
print("estafilococo: ", round(quant[0], 1))
print("salmonela: ", round(quant[1], 1))
print("coli: ", round(quant[2], 1))
if quant[0] == min(quant):
	print("estafilococo")
elif quant[1] == min(quant):
	print("salmonela")
else:
	print("coli")
-- EXECUTION TIME:
1.0473
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  450.0
salmonela:  100.0
coli:  300.0
salmonela
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  450.0
salmonela:  100.0
coli:  300.0
salmonela
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  450.0
salmonela:  100.0
coli:  300.0
salmonela
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:16:31) 
-- CODE:
from numpy import *
from numpy.linalg import *
quant = ([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
n = array([2200, 650, 1800])
n = n.T
quant = dot(inv(quant), n)
print("estafilococo: ", round(quant[0], 1))
print("salmonela: ", round(quant[1], 1))
print("coli: ", round(quant[2], 1))
if quant[0] == min(quant):
	print("estafilococo")
elif quant[1] == min(quant):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 22:16:47) 
-- CODE:
from numpy import *
from numpy.linalg import *
quant = ([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
n = array([2200, 650, 1800])
n = n.T
quant = dot(inv(quant), n)
print("estafilococo: ", round(quant[0], 1))
print("salmonela: ", round(quant[1], 1))
print("coli: ", round(quant[2], 1))
if quant[0] == min(quant):
	print("estafilococo")
elif quant[1] == min(quant):
	print("salmonela")
else:
	print("coli")
-- EXECUTION TIME:
0.851206
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  450.0
salmonela:  100.0
coli:  300.0
salmonela
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  450.0
salmonela:  100.0
coli:  300.0
salmonela
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  450.0
salmonela:  100.0
coli:  300.0
salmonela
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:17:25) 
-- CODE:
from numpy import *
from numpy.linalg import *
quant = ([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
n = array([",", ",", ","])
n = n.T
quant = dot(inv(quant), n)
print("estafilococo: ", round(quant[0], 1))
print("salmonela: ", round(quant[1], 1))
print("coli: ", round(quant[2], 1))
if quant[0] == min(quant):
	print("estafilococo")
elif quant[1] == min(quant):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:19:54) 
-- CODE:
from numpy import *
from numpy.linalg import *
quant = ([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
n = array(["quantidade de gramas: "])
n = n.T
quant = dot(inv(quant), n)
print("estafilococo: ", round(quant[0], 1))
print("salmonela: ", round(quant[1], 1))
print("coli: ", round(quant[2], 1))
if quant[0] == min(quant):
	print("estafilococo")
elif quant[1] == min(quant):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:20:22) 
-- CODE:
from numpy import *
from numpy.linalg import *
quant = ([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
n = array(["vetores: "])
n = n.T
quant = dot(inv(quant), n)
print("estafilococo: ", round(quant[0], 1))
print("salmonela: ", round(quant[1], 1))
print("coli: ", round(quant[2], 1))
if quant[0] == min(quant):
	print("estafilococo")
elif quant[1] == min(quant):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:20:47) 
-- CODE:
from numpy import *
from numpy.linalg import *
quant = ([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
n = array([X,Y,Z])
n = n.T
quant = dot(inv(quant), n)
print("estafilococo: ", round(quant[0], 1))
print("salmonela: ", round(quant[1], 1))
print("coli: ", round(quant[2], 1))
if quant[0] == min(quant):
	print("estafilococo")
elif quant[1] == min(quant):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:21:32) 
-- CODE:
from numpy import *
from numpy.linalg import *
quant = ([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
n = array(["X,Y,Z"])
n = n.T
quant = dot(inv(quant), n)
print("estafilococo: ", round(quant[0], 1))
print("salmonela: ", round(quant[1], 1))
print("coli: ", round(quant[2], 1))
if quant[0] == min(quant):
	print("estafilococo")
elif quant[1] == min(quant):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:27:54) 
-- CODE:
from numpy import *
from numpy.linalg import *
quant = ([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
n = array(eval(input("Gramas: "))
n = n.T
quant = dot(inv(quant), n)
print("estafilococo: ", round(quant[0], 1))
print("salmonela: ", round(quant[1], 1))
print("coli: ", round(quant[2], 1))
if quant[0] == min(quant):
	print("estafilococo")
elif quant[1] == min(quant):
	print("salmonela")
else:
	print("coli")
-- ERROR:
File "XXXX", line 5
    n = n.T
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:29:09) 
-- CODE:
from numpy import *
from numpy.linalg import *
quant = ([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
n = array(eval(input("Gramas: "))
print(n)
quant = dot(inv(quant), n)
print("estafilococo: ", round(quant[0], 1))
print("salmonela: ", round(quant[1], 1))
print("coli: ", round(quant[2], 1))
if quant[0] == min(quant):
	print("estafilococo")
elif quant[1] == min(quant):
	print("salmonela")
else:
	print("coli")
-- ERROR:
File "XXXX", line 5
    print(n)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:30:35) 
-- CODE:
from numpy import *
from numpy.linalg import *
quant = ([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
n = array(eval(input("Gramas: "))
print("n")
quant = dot(inv(quant), n)
print("estafilococo: ", round(quant[0], 1))
print("salmonela: ", round(quant[1], 1))
print("coli: ", round(quant[2], 1))
if quant[0] == min(quant):
	print("estafilococo")
elif quant[1] == min(quant):
	print("salmonela")
else:
	print("coli")
-- ERROR:
File "XXXX", line 5
    print("n")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:30:50) 
-- CODE:
from numpy import *
from numpy.linalg import *
quant = ([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
n = array(eval(input("Gramas: "))
quant = dot(inv(quant), n)
print("estafilococo: ", round(quant[0], 1))
print("salmonela: ", round(quant[1], 1))
print("coli: ", round(quant[2], 1))
if quant[0] == min(quant):
	print("estafilococo")
elif quant[1] == min(quant):
	print("salmonela")
else:
	print("coli")
-- ERROR:
File "XXXX", line 5
    quant = dot(inv(quant), n)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 23:14:43) 
-- CODE:
from numpy import *
from numpy.linalg import *
quant = ([[2, 1, 4], [1, 2, 0], [2, 3, 2]])
n = array([2200, z, ","])
n = n.T
quant = dot(inv(quant), n)
print("estafilococo: ", round(quant[0], 1))
print("salmonela: ", round(quant[1], 1))
print("coli: ", round(quant[2], 1))
if quant[0] == min(quant):
	print("estafilococo")
elif quant[1] == min(quant):
	print("salmonela")
else:
	print("coli")
-- EXECUTION TIME:
1.07081
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1838/2602/main.py", line 4, in <module>
    n = array([2200, z, ","])
NameError: name 'z' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
